Update some post styling.  Make sure post title is at the top of the page.  Line up the margins of the post title better. Add some extra margins to the top of the feature image and post content, so they aren't all jammed together.  Also, add an optional caption for the feature image.

--- a/_includes/css/wndx.scss
+++ b/_includes/css/wndx.scss
@@ -23,6 +23,11 @@ body.not-home { padding-top: 90px; }
   top: 90px;
 }
 
+.page-title {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .page-title h1, .page-title hr {
   margin-top: 3px;
   margin-bottom: 3px;
@@ -30,6 +35,10 @@ body.not-home { padding-top: 90px; }
 
 .page-title hr {
   border-top: 3px solid #{{ site.data.template.color.primary }};
+}
+
+#content, .page-feature {
+  margin-top: 2em;
 }
 
 /* Custom, iPhone Retina */
